compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__addition.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(x, y) {\n  case 1 {\n    _ if 1 + x == 2 -> 0\n    _ if 1.0 +. y == 2.0 -> 0\n    _ -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(x, y) {
  case 1 {
    _ if 1 + x == 2 -> 0
    _ if 1.0 +. y == 2.0 -> 0
    _ -> 1
  }
}


----- COMPILED NIX
let
  main =
    x: y:
    let
      _pat' = 1;
    in
    if (1 + x) == 2 then 0
    else if (1.0 + y) == 2.0 then 0
    else 1;
in
{ inherit main; }
