compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__eq_complex.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(xs, y) {\n  case xs {\n    #(x) if xs == y -> x\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs, y) {
  case xs {
    #(x) if xs == y -> x
    _ -> 0
  }
}


----- COMPILED NIX
let
  main = xs: y: if xs == y then let x = (builtins.elemAt xs 0); in x else 0;
in
{ inherit main; }
