compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__not.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(x, y) {\n  case x {\n    _ if !y -> 0\n    _ -> 1\n  }\n}\n"
---
let main = x: y: if !y then 0 else 1; in { inherit main; }
