compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__operator_wrapping_right.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "pub fn main(xs, y: Bool, z: Bool) {\n  case xs {\n    #(x) if x == { y == z } -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(xs, y: Bool, z: Bool) {
  case xs {
    #(x) if x == { y == z } -> 1
    _ -> 0
  }
}


----- COMPILED NIX
let
  main =
    xs: y: z:
    if (builtins.elemAt xs 0) == (y == z) then
      let
        x = (builtins.elemAt xs 0);
      in
      1
    else 0;
in
{ inherit main; }
